Issue1025-ResetEndpointCacheImplementationIncludingSwaggerAddition
